Cleanup and refactoring: removed unused imports and methods and cleaned up version control